--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,13 +1,13 @@
 <section class="section-contacts">
-    <div class="container">
+    <div class="container contacts">
         <h2 class="visibility-title">Contacts</h2>
-        <ul class="contacts-list">
-            <li>
+        <ul class="contacts-list list">
+            <li class="contacts-list_card">
                 <p class="contacts-list_point">cafe</p>
                 <h3 class="contacts-list_title">Chicago</h3>
                 <p class="contacts-list_text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
-                <ul class="contacts-list_hours">
+                <ul class="contacts-list_hours list">
                     <li class="contacts-list_block">
                         <p class="contacts-list_day">Monday - Friday</p>
                         <p class="contacts-list_time">06:00 AM - 10:00 PM</p>
@@ -17,10 +17,10 @@
                         <p class="contacts-list_time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list_address">
+                <ul class="contacts-list_address list">
                     <li class="contacts-list_item">
                         <a class="contact-list_link" href="mailto:noreply@envato.com">
-                            noreply@envato.com"
+                            noreply@envato.com
                         </a>
                     </li>
                     <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
@@ -28,12 +28,12 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li class="contacts-list_card">
                 <p class="contacts-list_point">FOODTRUCK</p>
                 <h3 class="contacts-list_title">Los Angeles</h3>
                 <p class="contacts-list_text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
-                <ul class="contacts-list_hours">
+                <ul class="contacts-list_hours list">
                     <li class="contacts-list_block">
                         <p class="contacts-list_day">Monday - Friday</p>
                         <p class="contacts-list_time">06:00 AM - 10:00 PM</p>
@@ -43,10 +43,10 @@
                         <p class="contacts-list_time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list_address">
+                <ul class="contacts-list_address list">
                     <li class="contacts-list_item">
                         <a class="contact-list_link" href="mailto:noreply@envato.com">
-                            noreply@envato.com"
+                            noreply@envato.com
                         </a>
                     </li>
                     <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
@@ -54,12 +54,12 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li class="contacts-list_card">
                 <p class="contacts-list_point">cafe</p>
                 <h3 class="contacts-list_title">New York</h3>
                 <p class="contacts-list_text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
-                <ul class="contacts-list_hours">
+                <ul class="contacts-list_hours list">
                     <li class="contacts-list_block">
                         <p class="contacts-list_day">Monday - Friday</p>
                         <p class="contacts-list_time">06:00 AM - 10:00 PM</p>
@@ -69,10 +69,10 @@
                         <p class="contacts-list_time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
-                <ul class="contacts-list_address">
+                <ul class="contacts-list_address list">
                     <li class="contacts-list_item">
                         <a class="contact-list_link" href="mailto:noreply@envato.com">
-                            noreply@envato.com"
+                            noreply@envato.com
                         </a>
                     </li>
                     <li class="contacts-list_item"><a class="contact-list_link" href="tel:+610383766284 ">
@@ -82,14 +82,14 @@
             </li>
         </ul>
         <div class="contacts-btn">
-            <button class="locations-btn" type="button">Our Locations
+            <button class="locations-btn button" type="button">Our Locations
                 <svg class="btn-icon" width="4" height="8">
-                    <use href=""></use>
+                    <use href="./image/sprite.svg#icon-arrow-right"></use>
                 </svg>
             </button>
-            <button class="franchise-btn" type="button">Franchise
+            <button class="franchise-btn button" type="button">Franchise
                 <svg class="btn-icon" width="4" height="8">
-                    <use href=""></use>
+                    <use href="./image/sprite.svg#icon-arrow-right"></use>
                 </svg>
             </button>
         </div>
