--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -140,9 +140,314 @@ img {
   background-color: #ffdab8;
 }
 
-.try__8 {
-  height: 300px;
-  background-color: #e4ffb8;
+.contacts {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(11%, #fff), color-stop(0, #fff5f6));
+  background-image: linear-gradient(#fff 11%, #fff5f6 0 100%);
+}
+
+.contacts-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 54px;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-bottom: 81px;
+  }
+}
+
+.contacts-list_card {
+  background: var(--secondary--title-color);
+  -webkit-box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+          box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 12px;
+}
+
+@media screen and (min-width: 320px) {
+  .contacts-list_card:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .contacts-list_card {
+    width: 220px;
+    padding: 43px 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_card:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_card {
+    width: 330px;
+    padding: 51px 43px 62px 43px;
+  }
+}
+
+.contacts-list_point {
+  display: inline-block;
+  padding: 0 25px;
+  margin-bottom: 25px;
+  color: var(--secondary--title-color);
+  background-color: var(--coffee-bg-color);
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.86;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_point {
+    margin-bottom: 30px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list_point {
+    margin-bottom: 32px;
+  }
+}
+
+.contacts-list_title {
+  font-size: 12px;
+  line-height: 1.86;
+  color: var(--main-text-color);
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1999px) {
+  .contacts-list_title {
+    margin-bottom: 14px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list_title {
+    font-size: 16px;
+  }
+}
+
+.contacts-list_text {
+  font-size: 12px;
+  line-height: 1.5;
+  color: var(--third-text-color);
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_text {
+    font-size: 14px;
+    line-height: 1.66;
+    padding-bottom: 32px;
+    margin-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list_text {
+    font-size: 16px;
+    line-height: 1.83;
+    padding-bottom: 32px;
+    margin-bottom: 32px;
+  }
+}
+
+.contacts-list_hours {
+  display: block;
+  padding-bottom: 25px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_hours {
+    padding-bottom: 32px;
+    margin-bottom: 32px;
+  }
+}
+
+.contacts-list_block:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_block:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
+.contacts-list_day {
+  color: var(--main-text-color);
+  font-size: 12px;
+  line-height: 1.86;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_day {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list_day {
+    font-size: 14px;
+  }
+}
+
+.contacts-list_time {
+  color: var(--time-color);
+  font-size: 12px;
+  line-height: 1.86;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_time {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list_time {
+    font-size: 16px;
+  }
+}
+
+.contacts-list_address {
+  display: block;
+  line-height: 1.5;
+}
+
+.contact-list_item {
+  font-size: 12px;
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list_item {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list_item {
+    font-size: 16px;
+  }
+}
+
+.contacts-list_link {
+  color: var(--third-text-color);
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+.contacts-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 113px;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-btn {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 165px;
+  }
+}
+
+.locations-btn {
+  margin: 0 auto 10px;
+  color: var(--secondary--title-color);
+  background-color: var(--btn-secondary-bg-color);
+  height: 44px;
+  border-radius: 22px;
+  font-size: 16px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 161px;
+}
+
+@media screen and (min-width: 768px) {
+  .locations-btn {
+    margin: 0 15px 0 0;
+    width: 191px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .locations-btn {
+    width: 198px;
+  }
+}
+
+.franchise-btn {
+  color: var(--main-title-color);
+  background-color: var(--secondary--title-color);
+  margin: 0 auto;
+  height: 44px;
+  border-radius: 22px;
+  width: 161px;
+}
+
+@media screen and (min-width: 768px) {
+  .franchise-btn {
+    width: 174px;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .franchise-btn {
+    width: 180px;
+  }
+}
+
+.btn-icon {
+  margin-left: 8px;
+  fill: var(--secondary--title-color);
 }
 
 .footer {
