--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,10 +1,17 @@
 <section class="about">
-    <div class="container about-container">
-        <p class="about-pre-text"> tradition and love </p>
-        <h2 class="about-title">how it’s made?</h2>
-        <picture>
-            <source src="./images/mobile/Display-x1/mobi-mukalo-x1.png 1x, ./images/mobile/Display-x1/mobi-mukalo-x2.png 2x">
-        </picture>
-        
+    <p class="about-pre-text">tradition and love</p>
+    <h2 class="about-title" >how it's made?</h2>
+    <picture>
+        <source srcset="./images/mobile/Display-x1/mobi-mukalo-x1.png 1x, ./images/mobile/Display-x2/mobi-mukalo-x2.png 1x" media="(min-width:320px)">
+        <img class="about-image" src="./images/mobile/Display-x1/mobi-mukalo-x1.png " alt="коровка">
+    </picture>
+    <div class="about-text" >
+        <p class="about-text-first"> Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros.
+        Maecenas eleifend erat at justo fringilla.</p>
+        <p class="about-text-two">
+            Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat.
+            Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.            
+            Aliquam erat volutpat. Aenean accumsan.
+        </p>
     </div>
 </section>
