--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,26 +1,54 @@
 .about {
+  background-color: var(--main-bg-color);
+  height: 1688px;
   padding-top: 125px;
 }
-.about-container {
-  height: 1688px;
-}
 .about-pre-text {
-  font-family: 'Titan One';
+  font-family: Titan One;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.17;
   text-align: center;
   text-transform: uppercase;
-  color: #ffa5ba;
+  color: var(--time-color);
+  margin-bottom: 15px;
 }
 
 .about-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
   font-size: 34px;
-  line-height: 39px;
+  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  color: var(--main-title-color);
+  margin-bottom: 26px;
+}
 
-  color: #d41443;
+.about-image {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 46px;
+}
+
+.about-text {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.58;
+  color: var(--main-text-color);
+  margin: 0 50px 40px 50px;
+}
+
+.about-text-two {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.58;
+  color: var(--third-text-color);
 }
