--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,14 +2,19 @@
     <p class="products__text">100% natural</p>
     <h2 class="products__heading">products</h2>
     <ul class="products-list">
-        <li class="products-list__products-item">
+        <li class="products-list__products-item products-list__products-item--color">
+            <div class="products-list__image-background">
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png"
+                    alt="ice cream">
+            </div>
             <h3 class="products-list__heading">ice cream</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
                     <use href="./images/sprite.svg#icon-points-2"></use>
                 </svg>
             </span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
+            <p class="products-list__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus,
+                repellendus voluptates excepturi
                 error quos
                 corrupti eius? Sapiente aliquam cumque deserunt similique veritatis qui corporis molestiae, eos
                 repellendus, ipsa
@@ -20,14 +25,19 @@
                 </svg>
             </button>
         </li>
-        <li class="products-list__products-item">
+        <li class="products-list__products-item products-list__products-item--color">
+            <div class="products-list__image-background">
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png"
+                    alt="ice cream">
+            </div>
             <h3 class="products-list__heading">ice coffee</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
                     <use href="./images/sprite.svg#icon-points-2"></use>
                 </svg>
             </span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
+            <p class="products-list__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus,
+                repellendus voluptates excepturi
                 error quos
                 corrupti eius? Sapiente aliquam cumque deserunt similique veritatis qui corporis molestiae, eos
                 repellendus, ipsa
@@ -38,14 +48,19 @@
                 </svg>
             </button>
         </li>
-        <li class="products-list__products-item">
+        <li class="products-list__products-item products-list__products-item--color">
+            <div class="products-list__image-background">
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png"
+                    alt="ice cream">
+            </div>
             <h3 class="products-list__heading">milkshakes</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
                     <use href="./images/sprite.svg#icon-points-2"></use>
                 </svg>
             </span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, repellendus voluptates excepturi
+            <p class="products-list__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus,
+                repellendus voluptates excepturi
                 error quos corrupti eius? Sapiente aliquam cumque deserunt similique veritatis qui corporis molestiae,
                 eos repellendus, ipsa minima? Libero!</p>
             <button type="button" class="products-list__button">
@@ -56,4 +71,3 @@
         </li>
     </ul>
 </section>
-
