--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,4 +1,58 @@
-.try__3 {
-  height: 300px;
-  background-color: #b8d9ff;
+.products__text {
+  font-size: 18px;
+  line-height: calc(21 / 18);
+  /* identical to box height */
+
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #ffa5ba;
+
+  margin-bottom: 15px;
+}
+.products__heading {
+  font-size: 34px;
+  line-height: calc(39 / 34);
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+
+  color: #9e7680;
+
+  margin-bottom: 31px;
+}
+
+.products-list__products-item {
+  width: 280px;
+  height: 485px;
+  border-radius: 24px;
+}
+.products-list__products-item--color {
+  &:nth-child(1) {
+    color: #ffb8ca;
+  }
+  &:nth-child(2) {
+    color: #f0d1a5;
+  }
+  &:nth-child(3) {
+    color: #c2e297;
+  }
+}
+.products-list__text {
+  font-family: DM Sans;
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: cacl(21/14);
+  /* or 21px */
+
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  color: #ffffff;
+}
+
+.products-list__image-background {
+  width: 100px;
+  height: 100px;
 }
