--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,10 +3,12 @@
     <h2 class="products__heading">products</h2>
     <ul class="products-list">
         <li class="products-list__products-item products-list__products-item--color">
-            <div class="products-list__image-background">
-                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png"
-                    alt="ice cream">
-            </div>
+         
+            <picture>
+                
+                <img src="./images/mobile/Display-x1/mobi-icecream1-x1.png" width="364" height="122" alt="галерея" class="gallery-main-img">
+            </picture>
+
             <h3 class="products-list__heading">ice cream</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
@@ -26,10 +28,9 @@
             </button>
         </li>
         <li class="products-list__products-item products-list__products-item--color">
-            <div class="products-list__image-background">
-                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png"
-                    alt="ice cream">
-            </div>
+            
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png" alt="ice cream"/>
+            
             <h3 class="products-list__heading">ice coffee</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
@@ -49,10 +50,10 @@
             </button>
         </li>
         <li class="products-list__products-item products-list__products-item--color">
-            <div class="products-list__image-background">
+            <!-- <div class="products-list__image-background">
                 <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png"
                     alt="ice cream">
-            </div>
+            </div> -->
             <h3 class="products-list__heading">milkshakes</h3>
             <span class="products-list__horizontal-scrolling">
                 <svg class="products-list__horizontal-scrolling-point" width="6" height="6">
