--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,17 +2,17 @@
     <h2 class="visually-hidden">advantages</h2>
     <div class="container">
         <ul class="advantages__list">
-            <li class="advantages__li ">
+            <li class="advantages__li list">
                 <img src="./images/advantages/cup.png" alt="яблоки" class="advantages__icon" width="33px" height="50px"/>    
                 <p class="advantages__bold-text">721</p>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages__li ">
+            <li class="advantages__li list">
                 <img src="./images/advantages/apples.png" alt="молоко" class="advantages__icon" width="50px" height="50px"/>     
                 <p class="advantages__bold-text">16kg</p>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages__li ">
+            <li class="advantages__li list">
                 <img src="./images/advantages/heart.png" alt="сердце" class="advantages__icon " width="44px" height="50px"/>
                 <p class="advantages__bold-text">84</p>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
