--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,26 +1,26 @@
-li { list-style-type: none;
-}
+// li { list-style-type: none;
+// }
 
-.container{
-    max-width: 1200px;
-    min-width: 280px;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: center;
-    align-items: center;
+// .container{
+//     max-width: 1200px;
+//     min-width: 280px;
+//     margin-right: auto;
+//     margin-left: auto;
+//     justify-content: center;
+//     align-items: center;
 
-    @media screen and (max-width: 767px) {
-        max-width: 480px;
-    }
+//     @media screen and (max-width: 767px) {
+//         max-width: 480px;
+//     }
 
-    @media screen and (min-width: 768px) {
-        width: 768px;
-    }
+//     @media screen and (min-width: 768px) {
+//         width: 768px;
+//     }
 
-    @media screen and (min-width: 1200px)   {
-        width: 1200px;
-    }  
-}
+//     @media screen and (min-width: 1200px)   {
+//         width: 1200px;
+//     }  
+// }
 
 .advantages{
     background-color: var(--main-bg-color);
