--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,16 +1,15 @@
-.try__6{
+/.try__6{
  
     background: linear-gradient(to bottom, var(--main-bg-color) 24%,  var(--secondary--title-color) 0%);
     align-items: center;
     padding-bottom: 80px;
 }
 .container-gallery {
-    width: 320px;
     margin-left: auto;
     margin-right: auto;
     align-items: center;
 }
 .gallery-main-img {
     display: block;
-    max-width: 364px;
+    width: 100%;
 }
