--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -13,108 +13,108 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-650-(8).jpg 1х"  media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-719-2-min.jpg 1х"  media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                    <img src="./images/gallery/gallery-tab-650-(8).jpg" width="650" alt="галерея" class="gallery-main-img1">
+                    <img src="./images/gallery/gallery-719-2-min.jpg" width="599" alt="галерея" class="gallery-main-img1">
                 </picture>
             </div>
             
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-771-(10).jpg 1х"  media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-600-min.jpg 1х"  media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                    <img src="./images/gallery/gallery-tab-771-(10).jpg" width="771" alt="галерея" class="gallery-main-img1">
+                    <img src="./images/gallery/gallery-600-min.jpg" width="600" alt="галерея" class="gallery-main-img1">
                 </picture>
             </div>
             
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-1280(2)-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-700-min.jpeg 1х" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                    <img src="./images/gallery/gallery-1280(2)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                    <img src="./images/gallery/gallery-700-min.jpeg" width="780" alt="галерея" class="gallery-main-img1">
                 </picture>
             </div> 
 
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-1280(3)-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-1-min.jpg 1х"  media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-1280(3)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                <img src="./images/gallery/gallery-719-1-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
           </div>
   
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-700-min.jpeg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-569-min.jpg 1х"  media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-700-min.jpeg" width="700" alt="галерея" class="gallery-main-img1">
+                <img src="./images/gallery/gallery-569-min.jpg" width="1438" alt="галерея" class="gallery-main-img img-scale">
             </picture>
           </div>
 
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-1280(7)-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-3-min.jpg 1х"  media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-1280(7)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                <img src="./images/gallery/gallery-719-3-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
         </div>
           
         <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-1280(4)-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-4-min.jpg 1х"  media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-1280(4)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                <img src="./images/gallery/gallery-719-4-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
         </div>
             
         <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-2-569-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-5-min.jpg 1х"  media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-2-569-min.jpg" width="559" alt="галерея" class="gallery-main-img1">
+                <img src="./images/gallery/gallery-719-5-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
         </div>
         
           <div class="gallery-group__item">
               <picture>
                   <!--<source  srcset="" media="(max-width: 767px)">--> 
-                  <source  srcset="./images/gallery/gallery-1280-1-min.jpg 1х"  media="(max-width: 1199px)">
+                  <source  srcset="./images/gallery/gallery-719-6-min.jpg 1х"  media="(max-width: 1199px)">
                  <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                  <img src="./images/gallery/gallery-1280-1-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                  <img src="./images/gallery/gallery-719-6-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
               </picture>
            </div>
 
              <div class="gallery-group__item">
                   <picture>
                       <!--<source  srcset="" media="(max-width: 767px)">--> 
-                      <source  srcset="./images/gallery/gallery-1280(6)-min.jpg 1х" media="(max-width: 1199px)">
+                      <source  srcset="./images/gallery/gallery-719-min.jpg 1х" media="(max-width: 1199px)">
                      <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                      <img src="./images/gallery/gallery-1280(6)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                      <img src="./images/gallery/gallery-719-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
                   </picture>
               </div>    
             
              <div class="gallery-group__item">
                  <picture>
                      <!--<source  srcset="" media="(max-width: 767px)">--> 
-                     <source  srcset="./images/gallery/gallery-tab-800-(5).jpg 1х"  media="(max-width: 1199px)">
+                     <source  srcset="./images/gallery/gallery-tab-463-min.jpg 1х"  media="(max-width: 1199px)">
                     <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                     <img src="./images/gallery/gallery-tab-800-(5).jpg" width="800" alt="галерея" class="gallery-main-img1">
+                     <img src="./images/gallery/gallery-tab-463-min.jpg" width="463" alt="галерея" class="gallery-main-img1">
                  </picture>
              </div>
    
              <div class="gallery-group__item">
                  <picture>
                      <!--<source  srcset="" media="(max-width: 767px)">--> 
-                     <source  srcset="./images/gallery/gallery-tab-860-(12).jpg 1х"  media="(max-width: 1199px)">
+                     <source  srcset="./images/gallery/gallery-tab-493-min.jpg 1х"  media="(max-width: 1199px)">
                     <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                     <img src="./images/gallery/gallery-tab-860-(12).jpg" width="860" alt="галерея" class="gallery-main-img1">
+                     <img src="./images/gallery/gallery-tab-493-min.jpg" width="493" alt="галерея" class="gallery-main-img1">
                  </picture>
              </div>    
     </div>
