--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -3,6 +3,7 @@
     background: linear-gradient(to bottom, var(--main-bg-color) 24%,  var(--secondary--title-color) 0%);
     align-items: center;
     padding-bottom: 80px;
+    padding-top: 40px;
 }
 .container-gallery {
     display: flex;
@@ -11,44 +12,52 @@
    /* padding-right: 75px;
     padding-left: 75px;*/
 }
+.img-opasity {
+    opacity: 0.2;
+}
+.img-scale{
+    display: block;
+    max-width: 200%;
+}
 .gallery-main-img {
     display: block;
-    max-width: 100%;
-}   
+    min-width: 100%;
+}
 
 /***masonry-styles *****************************/////////////////////////////
 
 .gallery-group {    
-    column-gap: 16px;
-    margin: 8px 10px; 
+    column-gap: 15px;
+    margin: 8px 15px; 
     @media only screen and (max-width: 479px) {
-        column-count: 2;
+        column-count: 6;
     }
     @media only screen and (min-width: 768px) and (max-width: 767px) {
-        column-count: 4;
+        column-count: 6;
     }
     @media only screen and (min-width: 768px) and (max-width: 1199px) {
-        column-count: 5;
+        column-count: 6;
     }
     @media only screen and (min-width: 1200px) {
         column-count: 6;
     }
 }
 .gallery-group__item {
-    opacity: 1;
-    overflow: hidden;
    background-color: var(--border-button1);
    margin: 8px 0;
-   padding: 5px;
+   padding: 1px;
+   margin: 8px 0;
     display: inline-block;
-    transition-property: opacity, box-shadow, scale;
+    transition: 1s;
+    transition-property: transform, box-shadow, scale;
     transition-duration: 250ms;
     transition-timing-function: var(--timing-function);
 &:hover,
 &:focus {
-    opacity: 0.8;
-    box-shadow: var(--box-shadow);
-    scale: 1.2;
+   /* box-shadow: var(--gal-box-shadow);*/
+     -webkit-transform: scale(1.1);
+     -ms-transform: scale(1.1);
+     transform: scale(1.1); 
 }
 }
 
