--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -54,5 +54,6 @@
         --mn-modal-label-text: rgba(145, 0, 0, 0.698);
         --mn-modal-modal-bordr-inp:  rgba(145, 0, 0, 0.698);
         --mn-modal-border-input: 1px solid rgba(145, 0, 0, 0.212);
+        --gal-box-shadow: 5px 10px 20px rgba(0,0,0,0.3), -5px -10px 20px rgba(255,255,255,0.5);
 
  }
