--- a/src/sass/_modals.scss
+++ b/src/sass/_modals.scss
@@ -9,6 +9,9 @@
   background-color: rgba(121, 60, 60, 0.2);
   opacity: 1;
   overflow-y: scroll;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
   @media screen and (max-width: 479px) {
       padding: 40px 20px 40px 20px;
   }
@@ -19,6 +22,9 @@ body.scroll{
 .is-hidden{
   opacity: 0;
   pointer-events: none;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 .modal__view{
   position: relative;
