--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -20,13 +20,13 @@
                 <a href="/index.html" class="mobile-menu__link link">About us</a>
             </li>
             <li class="mobile-menu__item">
-                <a href="/#about" class="mobile-menu__link link">How it’s made?</a>
+                <a href="#about" class="mobile-menu__link link">How it’s made?</a>
             </li>
             <li class="mobile-menu__item ">
-                <a href="/#products" class="mobile-menu__link link ">Our products</a>
+                <a href="#products" class="mobile-menu__link link ">Our products</a>
             </li>
             <li class="mobile-menu__item">
-                <a href="/#contacts" class="mobile-menu__link link ">Contact</a>
+                <a href="#contacts" class="mobile-menu__link link ">Contact</a>
             </li>
         </ul>
     </nav>
