--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -67,25 +67,7 @@
   }
 }
 
-.hero-image {
-  position: absolute;
-  top: 9px;
-  left: 81px;
-  height: 410px;
 
-  @media screen and (min-width: 768px) {
-    top: 32px;
-    left: 71px;
-    height: 336px;
-    width: 143px;
-  }
-  @media screen and (min-width: 1200px) {
-    top: 56px;
-    left: 119px;
-    height: 557px;
-    width: 236px;
-  }
-}
 .hero-image__item {
   width: 170px;
   height: 410px;
@@ -386,3 +368,49 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+
+.hero-image {
+  opacity: 0;
+  position: absolute;
+  top: 9px;
+  left: 81px;
+  height: 410px;
+  opacity: 0.2;
+  transform: scale(0.01) rotate(360deg);
+  transition-property: transform, opacity;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(.8, .1, 1, .04);
+
+  @media screen and (min-width: 768px) {
+    top: 32px;
+    left: 71px;
+    height: 336px;
+    width: 143px;
+  }
+  @media screen and (min-width: 1200px) {
+    top: 56px;
+    left: 119px;
+    height: 557px;
+    width: 236px;
+  }
+}
+.circle{
+  opacity: 1;
+  transform: scale(1);
+  }
+
+  // .hero-image {
+//   position: absolute;
+//   top: 9px;
+//   left: 81px;
+//   height: 410px;
+//   opacity: 0.2;
+//   transform: scale(0.01) rotate(360deg);
+//   transition-property: transform, opacity;
+//   transition-duration: 500ms;
+// }
+// .prili-leto{
+//   opacity: 1;
+//   transform: scale(1);
+// }
